edit about and include resume pdf

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -8,7 +8,9 @@
     }
     #contact, #projects {
       height: fit-content;
+      flex-wrap: wrap;
     }
+
 }
 
 @media screen and (max-width: 1200px) {
@@ -18,10 +20,11 @@
   #hamburger-nav {
     display: flex;
   }
+
   #experience, .experience-details-container {
     margin-top: 2rem;
   }
-  #profile, .section-container{
+  #profile, .section-container, .contact-info-upper-container {
     display: wrap;
     flex-wrap: wrap;
     justify-content:center;
@@ -29,7 +32,7 @@
   .arrow{
     display: none;
   }
-  section, .section-container {
+  section, .section-container, .contact-info-upper-container {
     flex-wrap: wrap;
     height: fit-content;
   }
@@ -38,27 +41,31 @@
     margin: 0 15%;
   }
   .section__pic-container-top, .section__pic-container-top {
-    width: auto;
-    height: 50vw;
+    width: 400px;
+    height: 400px;
     justify-content: center;
   }
 
   .about-containers {
     margin-top 0;
   }
+  contact{
+    text-align:center;
+  }
 
 }
 
 @media screen and (max-width: 600px) {
   section {
-    footer {
-      height: 40vh;
-    }
     flex-wrap:wrap;
+  }
+  footer {
+    height: 40vh;
   }
 
   #contact, footer {
     height:40vh;
+    justify-content: center;
   }
   #profile{
     height: 67vh;
@@ -94,14 +101,14 @@
   }
    .section__pic-container-top, .section__pic-container {
     display: flex;
-    width: auto;
-    height: 46vw;
+    width: 300px;
+    height: 300px;
     justify-content: center;
   }
   .section__pic-container-top img {
     display: flex;
     width: 100%;
-    height: 46vw;
+    height: 300px;
     object-fit: cover;
     border-radius: 50%;
     top:50%;
