--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -114,6 +114,11 @@ a:hover {
 
 .menu-links.open {
   max-height: 300px;
+  margin-right: 1rem;
+  border-radius: 2rem;
+  border: rgb(53,53,53,0.1) 0.1rem solid;
+  z-index: 2;
+
 }
 
 .hamburger-icon.open span:first-child {
@@ -185,13 +190,13 @@ section {
 
 .section__pic-container-top img {
   display: flex;
-  width: 100%; /* Make sure the image takes the full width of the container */
-  height: 100%; /* Make sure the image takes the full height of the container */
-  object-fit: cover; /* Clip the image while maintaining its aspect ratio */
-  border-radius: 50%; /* Match the border-radius of the container */
-  position: relative; /* Position the image relative to the container */
-  top: 50%; /* Shift the image down by 50% of the container's height */
-  transform: translateY(-50%); /* Adjust to vertically center the image */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   object-position: center top;
   margin: auto 0;
 }
@@ -332,6 +337,10 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+}
+
+.text-container p{
+  margin-bottom: 1rem;
 }
 
 /* Experience */
